# todo-list-project

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  dependencies.py  main.py  schemas.py
app/api/routes/: projects.py  tasks.py
app/cli/: __init__.py  console.py
app/commands/: __init__.py  autoclose_overdue.py  scheduler.py
app/db/: session.py
app/exceptions/: __init__.py  base.py  repository_exceptions.py  service_exceptions.py
app/models/: __init__.py  project.py  task.py
app/repositories/: __init__.py  project_repository.py  task_repository.py
app/services/: project_service.py  task_service.py
cli/: main.py
core/: models.py  services.py
migrations/: env.py
migrations/versions/: e9f72a563870_create_projects_and_tasks_tables.py
storage/: in_memory.py
tests/: conftest.py  test_project_repository.py  test_task_overdue.py  test_task_service.py
