[project]
name = "todo-list-project"
version = "0.1.0"
description = "A CLI ToDoList application built with Python and OOP principles."
authors = [
    { name = "Kiavash Foulad", email = "kiafoulad81@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
]

[tool.poetry]
packages = [{ include = "todo_list_project", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
